# translate-app

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: dropdown.js  main.js  settings.js  styles.css  tauri-bridge.js  translator.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  translator.rs
