[package]
name = "translate-app"
version = "0.3.1"
description = "A lightweight desktop translation tool"
authors = [""]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
md5 = "0.7"

enigo = "0.2"
arboard = "3"

[target."cfg(windows)".dependencies]
winreg = "0.52"
